<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_schedule"
        android:title="@string/schedules"
        android:icon="@drawable/ic_next"/>

    <item
        android:id="@+id/menu_team"
        android:title="@string/teams"
        android:icon="@drawable/ic_teams"/>

    <item
        android:id="@+id/menu_favorite"
        android:title="@string/favorites"
        android:icon="@drawable/ic_add_to_favorites"/>
</menu>