...
                android:maxLines="1"
                android:maxWidth="120dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_time"
                tools:text="Arsenal" />

            <TextView
                android:id="@+id/txt_home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
...
